# parallel_qsim_rust

./: .gitignore  Cargo.toml  README.md  bla.txt  build.rs  run_rvr.sh  run_rvr.txt  rust-toolchain.toml
rust_qsim/: Cargo.toml  build.rs
rust_qsim/assets/: population-v6-34-persons.xml  rvr-1pct.config.yml
rust_qsim/assets/3-links/: 1-agent-generic-leg.xml  1-agent.xml  3-agent_jam.xml  3-links-network.xml
rust_qsim/assets/adhoc_routing/no_updates/: agents.xml  agents_200m_higher.xml  network_200m_higher.xml
rust_qsim/assets/adhoc_routing/with_updates/: network.xml
rust_qsim/assets/drt/: config.yml
rust_qsim/assets/equil/: equil-1-plan.xml  equil-config.yml  equil-vehicles.xml
rust_qsim/assets/equil-100/: plans100.xml  run_equil_100.config.yml  vehicles.xml
rust_qsim/assets/io_network_tests/: simple-network.xml
rust_qsim/assets/mode_dependent_routing/: vehicle_definitions.xml
rust_qsim/assets/mode_dependent_routing/no_updates/: agents.xml
rust_qsim/assets/otf_viz_test/: otf_viz_network.xml  otf_viz_plans.xml  otf_viz_test_config.yml  otf_viz_vehicles.xml
rust_qsim/assets/pt_tutorial/: config.xml  plans-1_dummy.xml  plans_1-access_egress.xml  plans_1-dummy.xml
rust_qsim/assets/routing_tests/: network_different_modes.xml
rust_qsim/assets/test/: network.xml  plans.xml  run_equil_100.config.yml  run_viz_test_config.yml
rust_qsim/examples/: DynEqExample.rs  casting.rs  config_example.rs  local_qsim_routing.rs
rust_qsim/src/: lib.rs  test_utils.rs
rust_qsim/src/dvrp/: dvrp_agent_source.rs  io.rs  mod.rs
rust_qsim/src/experiments/: concurrent_dispatch.rs  concurrent_ping_pong.rs  link_automata_with_routes.rs  super_simple_link_automat.rs
rust_qsim/src/external_services/: mod.rs
rust_qsim/src/external_services/routing/: mod.rs  routing.proto
rust_qsim/src/simulation/: config.rs  config_simple.rs  logging.rs  mod.rs  random.rs  scenario.rs  simulation.rs  time_queue.rs
rust_qsim/src/simulation/agents/: agent.rs  agent_logic.rs  mod.rs
rust_qsim/src/simulation/controller/: controller.rs  local_controller.rs  mod.rs  mpi_controller.rs
rust_qsim/src/simulation/data_structures/: mod.rs
rust_qsim/src/simulation/engines/: activity_engine.rs  leg_engine.rs  mod.rs  network_engine.rs  teleportation_engine.rs
rust_qsim/src/simulation/events/: comparision.rs  comparison.rs  controller_event_printer.rs  mod.rs  print_events.rs  utils.rs  visualize.rs
rust_qsim/src/simulation/framework_events/: mod.rs
rust_qsim/src/simulation/id/: id_store.rs  mod.rs  serializable_type.rs
rust_qsim/src/simulation/io/: mod.rs  proto_events.rs
rust_qsim/src/simulation/io/proto/: mod.rs  proto_events.rs  proto_network.rs  proto_population.rs  proto_vehicles.rs  xml_events.rs
rust_qsim/src/simulation/io/xml/: attributes.rs  events.rs  facilities.rs  mod.rs  network.rs  population.rs  transit.rs  vehicles.rs
rust_qsim/src/simulation/messaging/: messages.rs  mod.rs
rust_qsim/src/simulation/messaging/sim_communication/: local_communicator.rs  message_broker.rs  mod.rs
rust_qsim/src/simulation/network/: flow_cap.rs  link.rs  metis_partitioning.rs  mod.rs  sim_network.rs  storage_cap.rs  stuck_timer.rs
rust_qsim/src/simulation/population/: agent_source.rs  mod.rs  trip_structure_utils.rs
rust_qsim/src/simulation/profiling/: mod.rs  routing.rs
rust_qsim/src/simulation/pt/: mod.rs
rust_qsim/src/simulation/replanning/: mod.rs  teleported_router.rs
rust_qsim/src/simulation/replanning/routing/: a_star.rs  a_star_core.rs  a_star_router.rs  alt_landmark_data.rs  alt_router.rs  dijsktra.rs  graph.rs  least_cost_path_calculator.rs  least_cost_path_caluclator.rs  mod.rs  network_converter.rs  network_routing.rs  router.rs  teleportation.rs  travel_time_collector.rs
rust_qsim/src/simulation/scenario/: facilities.rs  facility.rs  mod.rs  network.rs  population.rs  prepare_for_sim.rs  trip_structure_utils.rs  vehicles.rs
rust_qsim/src/simulation/scoring/: backpack.rs  backpack_data_collector.rs  benchmark.rs  kP_counter.rs  mod.rs  partial_plans.rs  scoring_broker.rs
rust_qsim/src/simulation/time/: mod.rs  time_interpretation.rs
rust_qsim/src/simulation/utils/: time.rs
rust_qsim/src/simulation/vehicles/: garage.rs  mod.rs
rust_qsim/tests/: io.rs  simulation.rs  test_3_links.rs  test_3_links_url.rs  test_config_simple.rs  test_empty.rs  test_equil.rs  test_equil_teleport.rs  test_events.rs  test_partition_events.rs  test_pt.rs  test_scoring.rs  test_simulation.rs  test_tracing.rs  tracing.rs
rust_qsim/tests/io/: events.rs  partition_events.rs  three_links_url.rs
rust_qsim/tests/resources/3-links/: 3-links-config-1.yml  3-links-config-2-teleport.yml  3-links-config-2.yml  events.0.binpb  events.1.binpb  expected_events.xml
rust_qsim/tests/resources/3-links-url/: 3-links-config-1.yml
rust_qsim/tests/resources/equil/: equil-1-plan-generic.xml  equil-config-1-adaptive.yml  equil-config-1-scoring.yml  equil-config-1.yml  equil-config-2-adaptive.yml  equil-config-2-scoring.yml  equil-config-2.yml  equil-config-simulate-generic-route-panics.yml  equil-config-simulate-network-route.yml  equil-config-teleport-generic-route.yml  equil-config-teleport-network-route.yml  expected_events.xml  expected_events_10_ticks.xml  expected_events_simulate_network_route.xml  expected_events_teleport_generic_route.xml  expected_events_teleport_network_route.xml
rust_qsim/tests/resources/events/: 3-links.ids.binpb  events.0.binpb  events.1.binpb  expected_events.0.xml  expected_events.1.xml  expected_events.xml  expected_events_changed_order_illegally.xml  expected_events_changed_order_legally.xml  expected_events_modified_data.xml  expected_events_removed_events.xml
rust_qsim/tests/resources/pt_tutorial/: expected_events.xml  expected_events_adaptive.xml  pt_tutorial_config.yml  pt_tutorial_config_adaptive.yml
rust_qsim/tests/resources/simple_config/: example.yml
rust_qsim/tests/simulation/: empty.rs  equil.rs  equil_teleport.rs  iterations.rs  pt.rs  three_links.rs
rust_qsim/tests/support/: mod.rs  simulation_executor.rs
rust_qsim/tests/tracing/: routing.rs
(+470 files in other folders)
